@@ -1,3 +1,9 @@
+2008-06-04  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/bindings.lisp (mouse-click-to-focus-and-move-window)
+	(mouse-click-to-focus-and-resize-window): Stop button event. This
+	prevent a keyboard/pointer freeze.
+
 2008-06-03  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-internal.lisp (frame-lower-child)
